[tool.poetry]
name = "stock-project"
version = "0.1.0"
description = ""
authors = ["omerkobi <omerkobi9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
streamlit = "^1.41.1"
seaborn = "^0.13.2"
finviz = "^1.4.6"
yfinance = "^0.2.51"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
